--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 	<commons-logging.version>1.2</commons-logging.version>
 	<consul-client.version>1.5.2</consul-client.version>
 	<elasticsearch.version>6.8.17</elasticsearch.version>
-	<flink.version>1.13.5</flink.version>
+	<flink.version>1.16.0</flink.version>
 	<fogsy-qudt.version>1.0</fogsy-qudt.version>
 	<fst.version>2.56</fst.version>
 	<geojson-jackson.version>1.8</geojson-jackson.version>
@@ -569,7 +569,7 @@ IoT data streams.
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
-					<artifactId>flink-connector-kafka_2.11</artifactId>
+					<artifactId>flink-connector-kafka</artifactId>
 					<version>${flink.version}</version>
 				</dependency>
 				<dependency>
@@ -579,7 +579,7 @@ IoT data streams.
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
-					<artifactId>flink-streaming-java_2.11</artifactId>
+					<artifactId>flink-streaming-java</artifactId>
 					<version>${flink.version}</version>
 				</dependency>
 				<dependency>
@@ -976,7 +976,7 @@ IoT data streams.
         </dependency>
         <dependency>
           <groupId>org.apache.flink</groupId>
-          <artifactId>flink-test-utils_2.11</artifactId>
+          <artifactId>flink-test-utils</artifactId>
           <version>${flink.version}</version>
           <exclusions>
             <exclusion>
@@ -987,7 +987,7 @@ IoT data streams.
         </dependency>
         <dependency>
           <groupId>org.apache.flink</groupId>
-          <artifactId>flink-runtime_2.11</artifactId>
+          <artifactId>flink-runtime</artifactId>
           <version>${flink.version}</version>
           <type>test-jar</type>
         </dependency>
@@ -1243,17 +1243,12 @@ IoT data streams.
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
-					<artifactId>flink-cep_2.11</artifactId>
+					<artifactId>flink-cep</artifactId>
 					<version>${flink.version}</version>
 				</dependency>
 				<dependency>
 					<groupId>org.apache.flink</groupId>
-					<artifactId>flink-cep-scala_2.11</artifactId>
-					<version>${flink.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.flink</groupId>
-					<artifactId>flink-runtime_2.11</artifactId>
+					<artifactId>flink-runtime</artifactId>
 					<version>${flink.version}</version>
 				</dependency>
 				<dependency>
