--- a/streampipes-extensions/streampipes-processors-text-mining-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-text-mining-flink/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-cep-scala_2.11</artifactId>
+            <artifactId>flink-cep</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
@@ -83,6 +83,10 @@
                 <exclusion>
                     <groupId>org.scala-lang</groupId>
                     <artifactId>scala-compiler</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.flink</groupId>
+                    <artifactId>flink-test-utils_2.11</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
