[STREAMPIPES-651] Activate Github issues

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -27,5 +27,5 @@ github:
     jobs: issues@streampipes.apache.org
   features:
     wiki: false
-    issues: false
+    issues: true
     projects: false
