[STREAMPIPES-651] Temporarily send notifications to commits list

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -25,6 +25,8 @@ github:
     - self-service
   notifications:
     jobs: issues@streampipes.apache.org
+    commits: commits@streampipes.apache.org
+    issues: issues@streampipes.apache.org
   features:
     wiki: false
     issues: true
