Add docker-compose and CLI environments for Nats messaging option (#818)

--- a/installer/cli/.env
+++ b/installer/cli/.env
@@ -26,10 +26,10 @@ COMPOSE_PROJECT_NAME=streampipes
 # -------------------------------------------------------------
 
 # Configuration to set prioritized protocol in backend service
-# 
-# options: kafka, mqtt, jms
+# needs to be changed in case one of the 'nats' or 'minimal' options is selected
+# options: kafka, mqtt, jms, nats
 # default: kafka
-#SP_PRIORITIZED_PROTOCOL=mqtt
+#SP_PRIORITIZED_PROTOCOL=nats
 
 # Configuration to set MQTT host in backend service
 # 
