--- a/installer/k8s/values.yaml
+++ b/installer/k8s/values.yaml
@@ -15,7 +15,7 @@
 
 # lite or full (default: lite)
 deployment: lite
-preferredBroker: "kafka"
+preferredBroker: "nats"
 pullPolicy: "IfNotPresent"
 persistentVolumeReclaimPolicy: "Delete"
 persistentVolumeAccessModes: "ReadWriteOnce"
