--- a/pom.xml
+++ b/pom.xml
@@ -1814,6 +1814,10 @@ IoT data streams.
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>${maven-checkstyle-plugin.version}</version>
+				<configuration>
+					<logViolationsToConsole>false</logViolationsToConsole>
+					<failOnViolation>false</failOnViolation>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
