[maven-release-plugin] prepare branch @{releaseLabel}

--- a/streampipes-extensions/streampipes-extensions-all-iiot/pom.xml
+++ b/streampipes-extensions/streampipes-extensions-all-iiot/pom.xml
@@ -151,4 +151,8 @@
         </plugins>
         <finalName>streampipes-extensions-all-iiot</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
