--- a/streampipes-extensions/streampipes-processors-image-processing-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-processors-image-processing-jvm/pom.xml
@@ -52,4 +52,8 @@
             <artifactId>ddogleg</artifactId>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
