--- a/streampipes-extensions/streampipes-processors-pattern-detection-flink/pom.xml
+++ b/streampipes-extensions/streampipes-processors-pattern-detection-flink/pom.xml
@@ -157,4 +157,8 @@
         </plugins>
         <finalName>streampipes-processors-pattern-detection-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
