--- a/streampipes-extensions/streampipes-sinks-databases-flink/pom.xml
+++ b/streampipes-extensions/streampipes-sinks-databases-flink/pom.xml
@@ -112,4 +112,8 @@
         </plugins>
         <finalName>streampipes-sinks-databases-flink</finalName>
     </build>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
