--- a/streampipes-extensions/streampipes-sources-vehicle-simulator/pom.xml
+++ b/streampipes-extensions/streampipes-sources-vehicle-simulator/pom.xml
@@ -102,4 +102,8 @@
         <finalName>streampipes-sources-vehicle-simulator</finalName>
 
     </build>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
