--- a/streampipes-extensions/streampipes-sources-watertank-simulator/pom.xml
+++ b/streampipes-extensions/streampipes-sources-watertank-simulator/pom.xml
@@ -111,4 +111,8 @@
         <finalName>streampipes-sources-watertank-simulator</finalName>
 
     </build>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
