--- a/pom.xml
+++ b/pom.xml
@@ -1872,7 +1872,7 @@ IoT data streams.
 		<developerConnection>scm:git:ssh://git@github.com/apache/streampipes.git</developerConnection>
 		<connection>scm:git:ssh://git@github.com/apache/streampipes.git</connection>
 		<url>https://github.com/apache/streampipes</url>
-		<tag>dev</tag>
+		<tag>rel/0.90.0</tag>
 	</scm>
 
 	<issueManagement>
