--- a/streampipes-extensions/streampipes-processors-transformation-jvm/pom.xml
+++ b/streampipes-extensions/streampipes-processors-transformation-jvm/pom.xml
@@ -48,4 +48,8 @@
             <version>0.90.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
+  <scm>
+    <tag>rel/0.90.0</tag>
+  </scm>
 </project>
